--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#wrapper {
+    margin: 1rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3 {
+    font-family: "Avenir";
+    font-size: 1.1rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    
+    color: #666;
+}
+
+td, th {
+    font-family: "Avenir";
+}
+
+
+tbody tr{
+    margin: 2rem 0;
+    line-height: 2rem;
+}
+
+tfoot tr{
+    margin: 2rem 0;
+    line-height: 2rem;
+}
+
+.tmpData {
+    height: 2rem;
+}
+
+table {
+    border-collapse: separate;
+    border-spacing: 2rem 1rem;
+    /* padding: 1rem 0; */
+}
+/* 
+ tbody {
+     outline: 1px solid;
+} */
+
+th {
+    font-weight: 800;
+    letter-spacing: 1px;
+    color: #BEBEBE;
+}
+
+.tmpData td {
+    color: #8BE39E;
+    padding: 0;
+    
+}
+
+tfoot td input {
+    font-family: "Avenir";
+    font-size: .9rem;
+    padding: 0 0 0 .5rem;
+    height: 2rem;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    background-color: #F2F2F2;
+}
+
+tfoot td input::placeholder {
+    font-family: "Avenir";
+    color: rgb(135, 135, 135);
+}
+
+.product-link a {
+    text-decoration: underline;
+    color: #000;
+}
+
+.submit-btn {
+    border: none;
+    background: none;
+}
+
+.submit-btn img{
+    /* display: block; */
+    transform: translateY(.3rem);
+    vertical-align: bottom;
 }
